@@ -50,7 +50,8 @@ typedef enum
   G_OPTION_ARG_FILENAME,
   G_OPTION_ARG_STRING_ARRAY,
   G_OPTION_ARG_FILENAME_ARRAY,
-  G_OPTION_ARG_DOUBLE
+  G_OPTION_ARG_DOUBLE,
+  G_OPTION_ARG_INT64
 } GOptionArg;
 
 typedef gboolean (*GOptionArgFunc) (const gchar    *option_name,
